[gd_scene load_steps=20 format=3 uid="uid://buaqdgfg1eoj8"]

[ext_resource type="Script" uid="uid://ba7eufi35p1j3" path="res://Scripts/onClick.gd" id="1_7w63j"]
[ext_resource type="Script" uid="uid://dedwiyshteoqk" path="res://Scenes/principal.gd" id="1_hjo07"]
[ext_resource type="Texture2D" uid="uid://vd0emkds23d1" path="res://Sprits/nube.png" id="2_7w63j"]
[ext_resource type="PackedScene" uid="uid://b0lmoj0epkkm6" path="res://Scenes/Prefabs/Clouds/cloud.tscn" id="3_4c6i7"]
[ext_resource type="Script" uid="uid://cw4bd0030dv0y" path="res://Scripts/MovementCharacter.gd" id="3_8ed56"]
[ext_resource type="Texture2D" uid="uid://bsr4dkoa7oamv" path="res://Sprits/tungtungtungshaungsprite.png" id="4_hjo07"]
[ext_resource type="Script" uid="uid://m764b3hmk0d5" path="res://Scripts/nubeMovement.gd" id="5_1d07u"]
[ext_resource type="Texture2D" uid="uid://870osuou8t" path="res://Sprits/tungtungtungtungshaunGolpeando.png" id="5_8ed56"]
[ext_resource type="Texture2D" uid="uid://jk4qee0uka1b" path="res://Sprits/floorSprite.png" id="5_e46k6"]
[ext_resource type="Texture2D" uid="uid://cdfntpa7tyrp3" path="res://Sprits/bombardinoCocodrilloSprite.png" id="6_1d07u"]
[ext_resource type="Script" uid="uid://cov4kr0blxp4l" path="res://Scripts/automaticMovement.gd" id="7_lop0i"]
[ext_resource type="PackedScene" uid="uid://bpc2by3f0gxgy" path="res://Scenes/Prefabs/tralaleroTralala/tralalero_tralala.tscn" id="9_hjo07"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7w63j"]
load_path = "res://.godot/imported/fondo.png-bffde79c11f74da13d1e151b3bb13fae.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrtif"]
size = Vector2(65, 140)

[sub_resource type="SpriteFrames" id="SpriteFrames_lop0i"]
animations = [{
"frames": [{
"duration": 0.1,
"texture": ExtResource("5_8ed56")
}, {
"duration": 0.1,
"texture": ExtResource("5_8ed56")
}, {
"duration": 0.1,
"texture": ExtResource("5_8ed56")
}, {
"duration": 0.1,
"texture": ExtResource("5_8ed56")
}, {
"duration": 0.1,
"texture": ExtResource("5_8ed56")
}],
"loop": false,
"name": &"attack",
"speed": 1.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hjo07")
}],
"loop": true,
"name": &"stay",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ed56"]
size = Vector2(77.67, 18.5018)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7cuts"]
size = Vector2(1145, 85)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4c6i7"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
gravity = Vector3(0, 98, 0)
color = Color(0, 0.505882, 0.505882, 0.501961)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c6i7"]
size = Vector2(70, 684)

[node name="Main" type="Node2D"]
script = ExtResource("1_hjo07")
shark_scene = ExtResource("9_hjo07")
clouds_sprite2D = ExtResource("3_4c6i7")

[node name="Button" type="Button" parent="." node_paths=PackedStringArray("shortcut_context")]
visible = false
offset_left = 4.0
offset_right = 145.0
offset_bottom = 45.0
shortcut_context = NodePath(".")
text = "Â¡Hazme clic!"
script = ExtResource("1_7w63j")
metadata/_edit_use_anchors_ = true

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(576.25, 336)
scale = Vector2(1.12451, 0.65332)
texture = SubResource("CompressedTexture2D_7w63j")

[node name="Nube6" type="Sprite2D" parent="."]
position = Vector2(534, 103)
scale = Vector2(0.212402, 0.182129)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube7" type="Sprite2D" parent="."]
position = Vector2(18, 108)
scale = Vector2(0.212402, 0.182129)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube8" type="Sprite2D" parent="."]
position = Vector2(881, 458)
scale = Vector2(0.212402, 0.182129)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube9" type="Sprite2D" parent="."]
position = Vector2(987, 149)
scale = Vector2(0.212402, 0.182129)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube10" type="Sprite2D" parent="."]
position = Vector2(524, 311)
scale = Vector2(0.0451146, 0.033171)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube5" type="Sprite2D" parent="."]
position = Vector2(156, 430)
scale = Vector2(0.212402, 0.182129)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube4" type="Sprite2D" parent="."]
position = Vector2(568, 433)
scale = Vector2(0.0451146, 0.033171)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube3" type="Sprite2D" parent="."]
position = Vector2(170, 171)
scale = Vector2(0.0451146, 0.033171)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube2" type="Sprite2D" parent="."]
position = Vector2(157, 328)
scale = Vector2(0.0451146, 0.033171)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Nube1" type="Sprite2D" parent="."]
position = Vector2(710, 230)
scale = Vector2(0.212402, 0.182129)
texture = ExtResource("2_7w63j")
script = ExtResource("5_1d07u")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(-211, 30)
collision_layer = 3
collision_mask = 2
platform_wall_layers = 1
script = ExtResource("3_8ed56")

[node name="ColliderBody" type="CollisionShape2D" parent="Player"]
position = Vector2(515, 431)
shape = SubResource("RectangleShape2D_rrtif")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
visible = false
position = Vector2(515.75, 449.5)
scale = Vector2(0.112793, 0.100911)
texture = ExtResource("4_hjo07")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
z_index = 2
position = Vector2(514, 427)
scale = Vector2(0.127604, 0.106608)
sprite_frames = SubResource("SpriteFrames_lop0i")
animation = &"stay"
flip_h = true

[node name="Bate" type="CollisionShape2D" parent="Player"]
position = Vector2(472, 439)
rotation = 0.190241
shape = SubResource("RectangleShape2D_8ed56")
debug_color = Color(0.641391, 0.000458012, 0.67674, 0.419608)

[node name="Label" type="Label" parent="Player/Bate"]
offset_left = -39.7793
offset_top = -32.0562
offset_right = 0.220703
offset_bottom = -9.0562

[node name="Suelo" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Suelo"]
position = Vector2(573.5, 627)
shape = SubResource("RectangleShape2D_7cuts")

[node name="Sprite2D" type="Sprite2D" parent="Suelo"]
z_index = 2
position = Vector2(575.5, 529)
scale = Vector2(0.750651, 0.275391)
texture = ExtResource("5_e46k6")

[node name="Bombardino" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(394, 184)
scale = Vector2(0.168825, 0.181491)
texture = ExtResource("6_1d07u")
script = ExtResource("7_lop0i")
speed = 200.0
amplitude = 60.0

[node name="SpeedTrail" type="GPUParticles2D" parent="Bombardino"]
position = Vector2(-568.636, -11.0198)
amount = 50
lifetime = 0.5
process_material = SubResource("ParticleProcessMaterial_4c6i7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Counter" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Saltos: 0"
metadata/_edit_use_anchors_ = true

[node name="SpawnTralaleros" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SpawnClouds" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
light_mask = 3
visibility_layer = 3
position = Vector2(1189, 332)
shape = SubResource("RectangleShape2D_4c6i7")
debug_color = Color(0.724367, 0.477039, 0, 0.42)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-40, 1)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
light_mask = 3
visibility_layer = 3
position = Vector2(-35, 328)
shape = SubResource("RectangleShape2D_4c6i7")
debug_color = Color(0.724367, 0.477039, 0, 0.42)

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="animation_finished" from="Player/AnimatedSprite2D" to="Player" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="SpawnTralaleros" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="SpawnClouds" to="." method="_on_CloudTimer_timeout"]
